Fixed gallery modal on mobile devices

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -711,6 +711,13 @@ header {
   ul {
     margin: 2rem 0;
     padding: 0;
+    &:after {
+      content: "";
+      clear: both;
+      display: table;
+      width: 0;
+      height: 0;
+    }
     li {
       float: left;
       a {
